--- a/TS_DegFreedom_Sigma_Relation_FermiLAT.ipynb
+++ b/TS_DegFreedom_Sigma_Relation_FermiLAT.ipynb
@@ -79,9 +79,9 @@
         "# dof = Number of Degrees of Freedom \n",
         "\n",
         "TS=25\n",
-        "dof=4\n",
+        "dof=1\n",
         "\n",
-        "nsigma = norm.isf(distributions.chi2.sf(TS,dof))\n",
+        "nsigma = norm.isf(distributions.chi2.sf(TS,dof)/2)\n",
         "\n",
         "print(\"For a likelihood analysis with\",dof,\"degrees of freedom, a signature with TS of\",TS,\"corresponds to a %.2f\"%nsigma,\"sigma detection.\")\n"
       ],
