def sigma function add lines to handle invalid entries / error message

--- a/TS_DegFreedom_Sigma_Relation_FermiLAT.ipynb
+++ b/TS_DegFreedom_Sigma_Relation_FermiLAT.ipynb
@@ -1,24 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "TS-DegFreedom-Sigma-Relation-FermiLAT.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "K6w0AljmdSpB",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "K6w0AljmdSpB"
       },
       "source": [
         "# Fermi-LAT: Convert TS + Degree of Freedom --> $\\sigma$  \n",
@@ -42,72 +28,121 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 26,
       "metadata": {
-        "id": "0estEfx0dSpC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import pandas as pd\n",
-        "import pylab as pl\n",
-        "import numpy as np\n",
-        "import scipy.optimize as opt\n",
-        "#from sklearn import preprocessing \n",
-        "#from sklearn.model_selection import train_test_split\n",
-        "%matplotlib inline\n",
-        "#import matplotlib.pyplot as plt\n",
-        "#import matplotlib.mlab as mlab\n",
-        "from scipy.stats import distributions,norm\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "OotHKgSvCkVc",
-        "colab_type": "code",
-        "outputId": "8c01d217-48ce-4737-c2a4-2692b763a0ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "colab_type": "code",
+        "id": "OotHKgSvCkVc",
+        "outputId": "8c01d217-48ce-4737-c2a4-2692b763a0ca"
       },
+      "outputs": [],
       "source": [
+        "# import libraries\n",
+        "import numpy as np\n",
+        "from scipy.stats import norm, chi2\n",
         "\n",
-        "# TS  = The Test Statistical value (result of the likelihood analysis)\n",
-        "# dof = Number of Degrees of Freedom \n",
+        "# define sigma function\n",
+        "def sigma(TS, dof):\n",
+        "    \"\"\"\n",
+        "    Calculate the significance (in sigma) from a Test Statistic (TS) value.\n",
         "\n",
-        "TS=25\n",
-        "dof=4\n",
+        "    Parameters:\n",
+        "    TS (float): Test Statistic value, must be non-negative.\n",
+        "    dof (int): Degrees of Freedom, must be positive.\n",
         "\n",
-        "nsigma = norm.isf(distributions.chi2.sf(TS,dof)/2)\n",
+        "    Returns:\n",
+        "    float: The significance in terms of sigma.\n",
+        "    \n",
+        "    Raises:\n",
+        "    ValueError: If TS is negative or dof is not positive.\n",
+        "    \"\"\"\n",
+        "    # Validate inputs\n",
+        "    if TS < 0:\n",
+        "        raise ValueError(\"TS value must be non-negative.\")\n",
+        "    if dof <= 0:\n",
+        "        raise ValueError(\"Degrees of Freedom (dof) must be positive.\")\n",
+        "    if not isinstance(dof, int):\n",
+        "        raise ValueError(\"Degrees of Freedom (dof) must be integer.\") \n",
         "\n",
-        "print(\"For a likelihood analysis with\",dof,\"degrees of freedom, a signature with TS of\",TS,\"corresponds to a %.2f\"%nsigma,\"sigma detection.\")\n"
-      ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "For a likelihood analysis with 4 degrees of freedom, a signature with TS of 25 corresponds to a 4.05 sigma detection.\n"
-          ],
-          "name": "stdout"
-        }
+        "    # Compute sigma\n",
+        "    if TS > 1400:\n",
+        "        # Approximation for large TS\n",
+        "        nsigma = np.sqrt(TS)\n",
+        "    else:\n",
+        "        # General case\n",
+        "        nsigma = norm.isf(chi2.sf(TS, dof) / 2)\n",
+        "    \n",
+        "    return nsigma\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "APk4Sh_PU5nC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "|"
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "For a likelihood analysis with 4 degrees of freedom,\n",
+            " a signature with TS 25 corresponds to a 4.05 sigma detection.\n",
+            "For a likelihood analysis with 2 degrees of freedom,\n",
+            " a signature with TS 19.8 corresponds to a 4.05 sigma detection.\n",
+            "For a likelihood analysis with 2 degrees of freedom,\n",
+            " a signature with TS 10 corresponds to a 2.71 sigma detection.\n"
+          ]
+        }
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "# Example with TS=25 and 4 dof \n",
+        "TS=25\n",
+        "dof=4\n",
+        "significance = sigma(TS,dof)\n",
+        "print(f\"For a likelihood analysis with {dof} degrees of freedom,\\n a signature with TS {TS} corresponds to a {significance:.2f} sigma detection.\")\n",
+        "\n",
+        "# Example with TS=25 and 2 dof \n",
+        "TS=19.8\n",
+        "dof=2\n",
+        "significance = sigma(TS,dof)\n",
+        "print(f\"For a likelihood analysis with {dof} degrees of freedom,\\n a signature with TS {TS} corresponds to a {significance:.2f} sigma detection.\")\n",
+        "\n",
+        "# Example with TS=10 and 2 dof \n",
+        "TS=10\n",
+        "dof=2\n",
+        "significance = sigma(TS,dof)\n",
+        "print(f\"For a likelihood analysis with {dof} degrees of freedom,\\n a signature with TS {TS} corresponds to a {significance:.2f} sigma detection.\")\n"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "TS-DegFreedom-Sigma-Relation-FermiLAT.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.1"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
